--- a/public/src/my-view1.html
+++ b/public/src/my-view1.html
@@ -9,7 +9,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<script src="../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 <link rel="import" href="../bower_components/iron-list/iron-list.html">
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
@@ -17,13 +16,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-item/paper-item-body.html">
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../bower_components/paper-dialog-behavior/paper-dialog-behavior.html">
-<link rel="import" href="../bower_components/iron-overlay-behavior/iron-overlay-behavior.html">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="my-view1">
     <template>
-
         <style include="shared-styles">
             :host {
                 padding: 10px;
@@ -68,12 +64,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <paper-button dialog-confirm autofocus>Accept</paper-button>
             </div>
         </paper-dialog-->
-        <paper-dialog id="modal" modal>
+        <!--paper-dialog id="modal" modal>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <div class="buttons">
                 <paper-button dialog-confirm autofocus>Tap me to close</paper-button>
             </div>
-        </paper-dialog>
+        </paper-dialog-->
 
         <div class="card">
             <h1>Doctores</h1>
@@ -106,7 +102,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             dataChanged: function (newData, oldData) {
                 // do something when the query returns values
-                console.log(newData, oldData);
+                console.log(newData);
             },
             toggleDialog: function() {
                 console.log("Nothing :)");
