--- a/public/src/my-view2.html
+++ b/public/src/my-view2.html
@@ -29,7 +29,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             paper-fab.blue {
                 --paper-fab-background: var(--paper-light-blue-500);
                 --paper-fab-keyboard-focus-background: var(--paper-light-blue-900);
-                position: absolute;
+                position: fixed;
                 bottom: 20px;
                 right: 20px;
             }
